[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 119
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 37
line_length = 119

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.7
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "rdf-linkchecker"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true


[project]
dependencies = [
"rich>=11,<13",
"rdflib==6.1.1",
"validators>=0.19,<0.21",
"user-agent==0.1.10",
"aiohttp==3.8.1",
"Brotli==1.0.9",
"typer==0.6.1",
]

name = "rdf-linkchecker"
version = "3.2.0"
description = "Checks if all requirements from a file are installed in the current Python env"
readme = "README.md"
authors = [
  { name = "René Fritze", email = "coding@fritze.me" },
]
requires-python = ">=3.7"
license = "BSD-3-Clause"
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[project.urls]
repository = "https://github.com/WWU-AMM/rdf_linkchecker"
homepage = "https://github.com/WWU-AMM/rdf_linkchecker"

[project.scripts]
rdf-linkchecker="rdf_linkchecker.__main__:app"

[project.optional-dependencies]
dev = [
"bandit==1.7.4",
"black==22.6",
"darglint==1.8.1",
"isort[colors]==5.10.1",
"mypy==0.971",
"mypy-extensions==0.4.3",
"pre-commit==2.20.0",
"pydocstyle==6.1.1",
"pylint==2.14.5",
"pytest==7.1.2",
"pyupgrade==3.1.0",
"safety==2.1.1",
"coverage==6.4",
"coverage-badge==1.1.0",
"pytest-html==3.1.1",
"pytest-cov==3.0.0",
"pytest-datadir==1.3.1",
"ipython==8.4.0",
"pytest-regressions==2.3.1",
]
